--- a/index.html
+++ b/index.html
@@ -1,62 +1,260 @@
 <!doctype html>
-<html>
+<html lang="pl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>❤️</title>
-<style>
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#111827;
-  font-family:system-ui;
-  color:white;
-  text-align:center;
-}
-.heart{
-  width:200px;
-  height:200px;
-  background:url("nasze.jpg") center/cover no-repeat;
-  transform:rotate(-45deg);
-  border-radius:20px;
-  position:relative;
-  cursor:pointer;
-}
-.heart:before,
-.heart:after{
-  content:"";
-  position:absolute;
-  width:200px;
-  height:200px;
-  background:inherit;
-  border-radius:50%;
-}
-.heart:before{ top:-100px; left:0; }
-.heart:after{ left:100px; top:0; }
-.secret{
-  display:none;
-  margin-top:20px;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>💘</title>
+  <style>
+    :root{
+      --bg1:#0b1020;
+      --bg2:#111827;
+      --card:#0b1220cc;
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --green:#22c55e;
+      --red:#ef4444;
+      --pink:#fb7185;
+      --pink2:#fda4af;
+    }
+
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      padding:24px;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(900px 600px at 20% 10%, #fb718533, transparent 60%),
+        radial-gradient(900px 600px at 80% 90%, #a78bfa33, transparent 60%),
+        linear-gradient(135deg, var(--bg1), var(--bg2));
+      overflow:hidden;
+    }
+
+    .card{
+      width:min(560px, 92vw);
+      border:1px solid #ffffff1a;
+      background:var(--card);
+      border-radius:20px;
+      padding:22px 18px;
+      box-shadow: 0 18px 60px #00000066;
+      backdrop-filter: blur(10px);
+      text-align:center;
+      position:relative;
+    }
+
+    h1{
+      margin:6px 0 10px;
+      font-size:26px;
+      line-height:1.2;
+      letter-spacing:0.2px;
+    }
+
+    .subtitle{
+      margin:0 0 16px;
+      color:var(--muted);
+      line-height:1.5;
+      font-size:14px;
+    }
+
+    .btns{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      justify-content:center;
+      margin-top:10px;
+    }
+
+    button{
+      border:0;
+      border-radius:14px;
+      padding:12px 14px;
+      font-size:16px;
+      font-weight:800;
+      cursor:pointer;
+      min-width:200px;
+      box-shadow: 0 10px 30px #00000055;
+    }
+
+    .yes{
+      background: linear-gradient(90deg, #16a34a, var(--green));
+      color:#06210f;
+    }
+
+    .obviously{
+      background: linear-gradient(90deg, #dc2626, var(--red));
+      color:#250607;
+    }
+
+    button:active{ transform: translateY(1px); }
+
+    /* Widoki */
+    .view{ display:none; }
+    .view.active{ display:block; }
+
+    /* Serce */
+    .heart-wrap{
+      width:min(260px, 70vw);
+      height:min(260px, 70vw);
+      margin: 10px auto 12px;
+      display:grid;
+      place-items:center;
+      position:relative;
+      filter: drop-shadow(0 18px 40px #00000088);
+    }
+
+    .heart{
+      width: 220px;
+      height: 220px;
+      background: radial-gradient(circle at 30% 30%, #ffffffcc, transparent 35%),
+                  linear-gradient(135deg, var(--pink), var(--pink2));
+      transform: rotate(-45deg);
+      border-radius: 24px;
+      position:relative;
+      animation: pulse 1.3s ease-in-out infinite;
+    }
+
+    .heart::before,
+    .heart::after{
+      content:"";
+      position:absolute;
+      width: 220px;
+      height: 220px;
+      background: inherit;
+      border-radius: 50%;
+    }
+    .heart::before{ top:-110px; left:0; }
+    .heart::after{ left:110px; top:0; }
+
+    @keyframes pulse{
+      0%,100%{ transform: rotate(-45deg) scale(1); }
+      50%{ transform: rotate(-45deg) scale(1.06); }
+    }
+
+    /* Połysk */
+    .shine{
+      position:absolute;
+      inset:-40%;
+      background: linear-gradient(120deg, transparent 40%, #ffffff55 50%, transparent 60%);
+      transform: rotate(10deg);
+      animation: shine 2.2s linear infinite;
+      pointer-events:none;
+      mix-blend-mode: screen;
+    }
+
+    @keyframes shine{
+      from{ transform: translateX(-40%) rotate(10deg); }
+      to{ transform: translateX(40%) rotate(10deg); }
+    }
+
+    .msg{
+      margin: 10px 0 0;
+      font-size:16px;
+      line-height:1.45;
+    }
+    .msg strong{ color: var(--pink2); }
+
+    .tiny{
+      margin-top:10px;
+      font-size:12px;
+      color:var(--muted);
+    }
+
+    /* Latające serduszka w tle */
+    .hearts{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      opacity:.35;
+    }
+    .float-heart{
+      position:absolute;
+      bottom:-30px;
+      animation: floatUp linear forwards;
+      filter: drop-shadow(0 6px 10px #00000088);
+    }
+    @keyframes floatUp{
+      from{ transform: translateY(0); opacity:0; }
+      10%{ opacity:1; }
+      to{ transform: translateY(-120vh); opacity:0; }
+    }
+  </style>
 </head>
 <body>
+  <div class="hearts" aria-hidden="true"></div>
 
-<div>
-  <div class="heart" onclick="showMessage()"></div>
-  <div class="secret" id="msg">
-    <h2>Kocham Cię ❤️</h2>
-    <p>Wróć bezpiecznie z gór.</p>
-  </div>
-</div>
+  <main class="card">
+    <!-- Widok 1 -->
+    <section id="viewAsk" class="view active">
+      <h1>Jacku, czy będziesz moją Walentynką?</h1>
+      <p class="subtitle">Masz do wyboru dwie odpowiedzi. Obie są poprawne. 😄</p>
 
-<script>
-function showMessage(){
-  document.getElementById("msg").style.display="block";
-}
-</script>
+      <div class="btns">
+        <button class="yes" id="btnYes">TAK</button>
+        <button class="obviously" id="btnObviously">OCZYWIŚCIE, ŻE TAK</button>
+      </div>
 
+      <div class="tiny">Tip: kliknij dowolny przycisk. To jest podchwytliwe pytanie.</div>
+    </section>
+
+    <!-- Widok 2 -->
+    <section id="viewLove" class="view">
+      <div class="heart-wrap" aria-hidden="true">
+        <div class="heart"></div>
+        <div class="shine"></div>
+      </div>
+
+      <p class="msg">
+        <strong>Kocham Cię, Skarbie.</strong><br/>
+        Wróć mi tu bezpiecznie z gór.
+      </p>
+
+      <div class="tiny">— Twoja Natalia 💘</div>
+    </section>
+  </main>
+
+  <script>
+    const viewAsk = document.getElementById("viewAsk");
+    const viewLove = document.getElementById("viewLove");
+    const btnYes = document.getElementById("btnYes");
+    const btnObviously = document.getElementById("btnObviously");
+    const heartsWrap = document.querySelector(".hearts");
+
+    function showLove(){
+      viewAsk.classList.remove("active");
+      viewLove.classList.add("active");
+      burstHearts();
+    }
+
+    btnYes.addEventListener("click", showLove);
+    btnObviously.addEventListener("click", showLove);
+
+    function burstHearts(){
+      const emojis = ["❤️","💗","💖","💘","💞"];
+      for(let i=0;i<22;i++){
+        setTimeout(() => spawnHeart(emojis[Math.floor(Math.random()*emojis.length)]), i*60);
+      }
+      setInterval(() => spawnHeart(emojis[Math.floor(Math.random()*emojis.length)]), 750);
+    }
+
+    function spawnHeart(char){
+      const el = document.createElement("div");
+      el.className = "float-heart";
+      el.textContent = char;
+
+      const x = Math.random() * window.innerWidth;
+      const size = 14 + Math.random() * 18;
+      const dur = 3 + Math.random() * 3;
+
+      el.style.left = x + "px";
+      el.style.fontSize = size + "px";
+      el.style.animationDuration = dur + "s";
+
+      heartsWrap.appendChild(el);
+      setTimeout(() => el.remove(), dur * 1000);
+    }
+  </script>
 </body>
 </html>
