--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>💘</title>
   <style>
     :root{
-      --bg: #B51A3A;
-      --card: #5E081E;
-      --text: #FFF1F2;
+      --bg:#8B0E2B;        /* ciemniejsze tło */
+      --card:#4C0519;      /* tło elementu z napisem */
+      --text:#FFF1F2;
       --muted: rgba(255,241,242,0.82);
 
       --green1:#16a34a;
@@ -19,11 +19,12 @@
 
       --pink1:#FB7185;
       --pink2:#FDA4AF;
+
       --shadow: rgba(0,0,0,0.45);
+      --border: rgba(255,241,242,0.18);
     }
 
     *{ box-sizing:border-box; }
-
     body{
       margin:0;
       min-height:100vh;
@@ -36,23 +37,42 @@
       overflow:hidden;
     }
 
-    /* delikatny “glow” w tle */
+    /* delikatny glow */
     body::before{
       content:"";
       position:fixed;
-      inset:-20%;
+      inset:-25%;
       background:
-        radial-gradient(900px 600px at 20% 15%, rgba(255,241,242,0.22), transparent 60%),
-        radial-gradient(800px 600px at 80% 85%, rgba(251,113,133,0.22), transparent 60%);
+        radial-gradient(900px 600px at 20% 15%, rgba(255,241,242,0.16), transparent 62%),
+        radial-gradient(900px 600px at 80% 85%, rgba(251,113,133,0.18), transparent 62%);
+      filter: blur(8px);
       pointer-events:none;
-      filter: blur(6px);
       opacity: 0.9;
     }
 
+    .hearts{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      opacity:.38;
+      z-index:0;
+    }
+    .float-heart{
+      position:absolute;
+      bottom:-30px;
+      animation: floatUp linear forwards;
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.45));
+    }
+    @keyframes floatUp{
+      from{ transform: translateY(0); opacity:0; }
+      10%{ opacity:1; }
+      to{ transform: translateY(-120vh); opacity:0; }
+    }
+
     .card{
-      width:min(620px, 94vw);
-      border:1px solid rgba(255,241,242,0.20);
-      background: rgba(94, 8, 30, 0.92); /* #5E081E */
+      width:min(680px, 94vw);
+      border:1px solid var(--border);
+      background: rgba(76, 5, 25, 0.90);
       border-radius:22px;
       padding:26px 18px 20px;
       box-shadow: 0 18px 60px var(--shadow);
@@ -62,12 +82,19 @@
       z-index:1;
     }
 
+    .view{ display:none; }
+    .view.active{ display:block; animation: fadeUp .28s ease-out; }
+    @keyframes fadeUp{
+      from{ opacity:0; transform: translateY(8px); }
+      to{ opacity:1; transform: translateY(0); }
+    }
+
     h1{
       margin: 4px 0 10px;
       font-size: 28px;
       line-height:1.2;
       letter-spacing:0.2px;
-      color: #ffffff;
+      color:#fff;
     }
 
     .subtitle{
@@ -90,7 +117,6 @@
       flex-wrap:wrap;
       margin-top: 12px;
     }
-
     button{
       border:0;
       border-radius:14px;
@@ -98,13 +124,12 @@
       font-size:16px;
       font-weight:800;
       cursor:pointer;
-      min-width: 210px;
+      min-width: 220px;
       box-shadow: 0 12px 30px rgba(0,0,0,0.35);
       transition: transform .08s ease, filter .15s ease;
       user-select:none;
       -webkit-tap-highlight-color: transparent;
     }
-
     button:hover{ filter: brightness(1.03); }
     button:active{ transform: translateY(1px) scale(0.99); }
 
@@ -112,130 +137,123 @@
       background: linear-gradient(90deg, var(--green1), var(--green2));
       color:#06210f;
     }
-
     .obviously{
       background: linear-gradient(90deg, var(--red1), var(--red2));
       color:#240606;
     }
 
-    /* Widoki */
-    .view{ display:none; }
-    .view.active{ display:block; animation: fadeUp .28s ease-out; }
-
-    @keyframes fadeUp{
-      from{ opacity:0; transform: translateY(8px); }
-      to{ opacity:1; transform: translateY(0); }
+    /* Ekran 2: “Otwórz Walentynkę” */
+    .openWrap{
+      margin: 6px auto 0;
+      display:grid;
+      place-items:center;
+      gap:12px;
     }
+    .openCard{
+      width:min(420px, 92%);
+      padding:18px 16px;
+      border-radius:18px;
+      border:1px solid rgba(255,241,242,0.20);
+      background: rgba(94, 8, 30, 0.45);
+      box-shadow: 0 18px 60px rgba(0,0,0,0.30);
+    }
+    .openButton{
+      width:min(420px, 92%);
+      padding:14px 16px;
+      border-radius:16px;
+      border:1px solid rgba(255,241,242,0.22);
+      background: linear-gradient(135deg, var(--pink1), var(--pink2));
+      color:#2a0610;
+      font-weight:900;
+      font-size:16px;
+      cursor:pointer;
+      box-shadow: 0 16px 40px rgba(0,0,0,0.35);
+    }
+    .openButton:active{ transform: translateY(1px) scale(0.99); }
 
-    /* Serce (mniejsze) */
+    /* Ekran 3: serce z fotą */
     .loveWrap{
-      margin: 4px auto 6px;
-      width: min(240px, 70vw);
-      height: min(210px, 62vw);
+      margin: 10px auto 10px;
+      width:min(320px, 74vw);
       position:relative;
       display:grid;
       place-items:center;
       filter: drop-shadow(0 16px 40px rgba(0,0,0,0.45));
     }
 
-    .heart{
-      width: 170px;
-      height: 170px;
+    .heartFrame{
+      width: 260px;
+      height: 240px;
       position:relative;
-      transform: rotate(-45deg);
-      border-radius: 22px;
-      overflow:hidden;
-      /* start: różowe */
-      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.75), transparent 38%),
-                  linear-gradient(135deg, var(--pink1), var(--pink2));
-      animation: pulse 1.25s ease-in-out infinite;
     }
 
-    .heart::before,
-    .heart::after{
-      content:"";
+    /* Serce jako “frame” */
+    .heartShape{
+      width:100%;
+      height:100%;
       position:absolute;
-      width: 170px;
-      height: 170px;
-      background: inherit;
-      border-radius: 50%;
+      inset:0;
+      /* start: różowe tło, zanim pokaże fotę */
+      background:
+        radial-gradient(circle at 30% 30%, rgba(255,255,255,0.70), transparent 40%),
+        linear-gradient(135deg, var(--pink1), var(--pink2));
+      animation: pulse 1.25s ease-in-out infinite;
+      border-radius: 18px; /* fallback */
+      overflow:hidden;
+      clip-path: path("M128 222C128 222 20 154 20 85C20 45 48 20 82 20C104 20 121 32 128 45C135 32 152 20 174 20C208 20 236 45 236 85C236 154 128 222 128 222Z");
     }
-    .heart::before{ top:-85px; left:0; }
-    .heart::after{ left:85px; top:0; }
 
     @keyframes pulse{
-      0%,100%{ transform: rotate(-45deg) scale(1); }
-      50%{ transform: rotate(-45deg) scale(1.06); }
+      0%,100%{ transform: scale(1); }
+      50%{ transform: scale(1.05); }
     }
 
-    /* połysk na sercu */
-    .shine{
-      position:absolute;
-      inset:-60%;
-      background: linear-gradient(120deg, transparent 42%, rgba(255,255,255,0.55) 50%, transparent 58%);
-      transform: rotate(10deg);
-      animation: shine 2.0s linear infinite;
-      pointer-events:none;
-      mix-blend-mode: screen;
-      opacity:0.9;
-    }
-    @keyframes shine{
-      from{ transform: translateX(-40%) rotate(10deg); }
-      to{ transform: translateX(40%) rotate(10deg); }
-    }
-
-    /* zdjęcie w sercu (po chwili) */
+    /* Zdjęcie w sercu */
     .photoLayer{
       position:absolute;
       inset:0;
-      border-radius: 22px;
-      overflow:hidden;
+      background: url("photo1.jpg") center/cover no-repeat;
+      /* dla pionowego zdjęcia: zwykle lepiej lekko podnieść kadr */
+      background-position: center 35%;
       opacity:0;
       transform: scale(1.02);
-      transition: opacity 550ms ease, transform 550ms ease;
-      background: url("photo1.jpg") center/cover no-repeat;
-      filter: saturate(1.05) contrast(1.02);
+      transition: opacity 650ms ease, transform 650ms ease;
+      filter: saturate(1.05) contrast(1.03);
     }
-    .photoOn .photoLayer{
+
+    .showPhoto .photoLayer{
       opacity:1;
       transform: scale(1);
     }
 
-    /* tekst w walentynce */
+    /* Połysk, ale nie zasłania zdjęcia “plamą” */
+    .shine{
+      position:absolute;
+      inset:-55%;
+      background: linear-gradient(120deg, transparent 45%, rgba(255,255,255,0.35) 50%, transparent 55%);
+      transform: rotate(12deg);
+      animation: shine 2.2s linear infinite;
+      pointer-events:none;
+      mix-blend-mode: screen;
+      opacity:0.85;
+    }
+    @keyframes shine{
+      from{ transform: translateX(-40%) rotate(12deg); }
+      to{ transform: translateX(40%) rotate(12deg); }
+    }
+
     .msg{
-      margin: 10px 0 0;
+      margin: 6px 0 0;
       font-size: 16px;
       line-height: 1.45;
       color: rgba(255,241,242,0.95);
     }
-    .msg strong{
-      color: #ffffff;
-    }
+    .msg strong{ color:#fff; }
 
     .sign{
       margin-top: 10px;
       font-size: 12px;
       color: rgba(255,241,242,0.78);
-    }
-
-    /* Latające serduszka */
-    .hearts{
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      opacity:.38;
-      z-index:0;
-    }
-    .float-heart{
-      position:absolute;
-      bottom:-30px;
-      animation: floatUp linear forwards;
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.45));
-    }
-    @keyframes floatUp{
-      from{ transform: translateY(0); opacity:0; }
-      10%{ opacity:1; }
-      to{ transform: translateY(-120vh); opacity:0; }
     }
   </style>
 </head>
@@ -247,23 +265,37 @@
     <!-- Ekran 1 -->
     <section id="viewAsk" class="view active">
       <h1>Jacku, czy będziesz moją Walentynką?</h1>
-      <p class="subtitle">Masz do wyboru tylko jedną z opcji. Nie spi**dol tego.</p>
+      <p class="subtitle">Chyba nie myślałeś, że możesz odpowiedzieć inaczej? ❤️</p>
 
       <div class="btns">
         <button class="yes" id="btnYes">TAK</button>
-        <button class="obviously" id="btnObviously">TAK, ALE CZERWONE</button>
+        <button class="obviously" id="btnRed">TAK, ALE CZERWONE</button>
       </div>
 
-      <div class="tip">Chyba nie myślałeś, że możesz odpowiedzieć inaczej?❤️</div>
+      <div class="tip">Uwaga: nie spierdol tego.</div>
     </section>
 
     <!-- Ekran 2 -->
+    <section id="viewOpen" class="view">
+      <h1>Okej. Dobra odpowiedź 😌</h1>
+      <p class="subtitle">Teraz kliknij jeszcze raz, żeby otworzyć Walentynkę.</p>
+
+      <div class="openWrap">
+        <div class="openCard">📩 Masz 1 nową wiadomość od: Natalia</div>
+        <button class="openButton" id="btnOpen">Otwórz Walentynkę</button>
+        <div class="tip">To też jest podchwytliwe. Ale w dobrym sensie.</div>
+      </div>
+    </section>
+
+    <!-- Ekran 3 -->
     <section id="viewLove" class="view">
       <div class="loveWrap" aria-hidden="true">
-        <div id="heartBox" class="heart">
-          <div class="photoLayer"></div>
+        <div id="heartBox" class="heartFrame">
+          <div class="heartShape">
+            <div class="photoLayer"></div>
+            <div class="shine"></div>
+          </div>
         </div>
-        <div class="shine"></div>
       </div>
 
       <p class="msg">
@@ -275,33 +307,49 @@
   </main>
 
   <script>
-    const viewAsk = document.getElementById("viewAsk");
-    const viewLove = document.getElementById("viewLove");
-    const btnYes = document.getElementById("btnYes");
-    const btnObviously = document.getElementById("btnObviously");
     const heartsWrap = document.querySelector(".hearts");
+
+    const viewAsk = document.getElementById("viewAsk");
+    const viewOpen = document.getElementById("viewOpen");
+    const viewLove = document.getElementById("viewLove");
+
+    const btnYes = document.getElementById("btnYes");
+    const btnRed = document.getElementById("btnRed");
+    const btnOpen = document.getElementById("btnOpen");
+
     const heartBox = document.getElementById("heartBox");
 
-    function showLove(){
+    function goToOpen(){
       viewAsk.classList.remove("active");
-      viewLove.classList.add("active");
-
-      // start serca: różowe. po chwili pokazujemy zdjęcie w sercu
-      heartBox.classList.remove("photoOn");
-      setTimeout(() => heartBox.classList.add("photoOn"), 650);
-
-      burstHearts();
+      viewOpen.classList.add("active");
+      burstHearts(12);
     }
 
-    btnYes.addEventListener("click", showLove);
-    btnObviously.addEventListener("click", showLove);
+    function goToLove(){
+      viewOpen.classList.remove("active");
+      viewLove.classList.add("active");
 
-    function burstHearts(){
+      // start: różowe serce → po chwili pokazujemy foto
+      heartBox.classList.remove("showPhoto");
+      setTimeout(() => heartBox.classList.add("showPhoto"), 700);
+
+      burstHearts(22);
+      setInterval(() => spawnHeart(randomEmoji()), 750);
+    }
+
+    btnYes.addEventListener("click", goToOpen);
+    btnRed.addEventListener("click", goToOpen);
+    btnOpen.addEventListener("click", goToLove);
+
+    function randomEmoji(){
       const emojis = ["❤️","💗","💖","💘","💞"];
-      for(let i=0;i<22;i++){
-        setTimeout(() => spawnHeart(emojis[Math.floor(Math.random()*emojis.length)]), i*55);
+      return emojis[Math.floor(Math.random()*emojis.length)];
+    }
+
+    function burstHearts(count){
+      for(let i=0;i<count;i++){
+        setTimeout(() => spawnHeart(randomEmoji()), i*55);
       }
-      setInterval(() => spawnHeart(emojis[Math.floor(Math.random()*emojis.length)]), 750);
     }
 
     function spawnHeart(char){
