--- a/index.html
+++ b/index.html
@@ -265,25 +265,24 @@
     <!-- Ekran 1 -->
     <section id="viewAsk" class="view active">
       <h1>Jacku, czy będziesz moją Walentynką?</h1>
-      <p class="subtitle">Chyba nie myślałeś, że możesz odpowiedzieć inaczej? ❤️</p>
-
+      <p class="subtitle">Zastanów się poważnie przed wybraniem opcji.</p>
       <div class="btns">
         <button class="yes" id="btnYes">TAK</button>
         <button class="obviously" id="btnRed">TAK, ALE CZERWONE</button>
       </div>
 
-      <div class="tip">Uwaga: nie spierdol tego.</div>
+      <div class="tip"></div>
     </section>
 
     <!-- Ekran 2 -->
     <section id="viewOpen" class="view">
-      <h1>Okej. Dobra odpowiedź 😌</h1>
-      <p class="subtitle">Teraz kliknij jeszcze raz, żeby otworzyć Walentynkę.</p>
+      <h1>Ufff, dobra odpowiedź! 😌</h1>
+      <p class="subtitle">Ooo, zobacz! Ktoś Ci coś wysłał.</p>
 
       <div class="openWrap">
         <div class="openCard">📩 Masz 1 nową wiadomość od: Natalia</div>
         <button class="openButton" id="btnOpen">Otwórz Walentynkę</button>
-        <div class="tip">To też jest podchwytliwe. Ale w dobrym sensie.</div>
+        <div class="tip"> Ciekawe, co tam jest!</div>
       </div>
     </section>
 
@@ -299,7 +298,7 @@
       </div>
 
       <p class="msg">
-        <strong>Kocham Cię, Skarbie.</strong><br/>
+        <strong>Jesteś moim Skarbem. Kocham Cię!</strong><br/>
         Baw się dobrze w górach i wracaj do nas bezpiecznie.
       </p>
       <div class="sign">— Twoja Natalia 💘</div>
